# meta-ad-policy-sandbox

./: .dockerignore  .gitignore  README.md  demo.py  dockerfile  grpo_train.ipynb  grpo_train.py  inference.py  kaggle-grpo-train-ipynb.ipynb  kaggle-grpo-train.ipynb  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  validate.sh
apps/: audit_api.py  crm_api.py  regulatory_api.py  start.sh  start_all.bat
server/: app.py
src/: .gitignore  environment.py  generator.py  models.py
src/meta_ad_policy_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
